# lua-xmlreader

./: CMakeLists.txt  xmlreader.c
cmake/: FindLua53.cmake
